<resources>
    <string name="app_name">QMK Control Center</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_vsm">Sound Mixer</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="vsm_header">QMK Virtual Sound Mixer</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- QMK Virtual Sound Mixer Preferences -->
    <string name="vsm_host_title">Server IP address</string>
    <string name="vsm_port_title">Port</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- General -->
    <string name="refresh">Refresh</string>
</resources>
